Results class for analyzing outputs

--- a/notebooks/LDA Experiment.ipynb
+++ b/notebooks/LDA Experiment.ipynb
@@ -40,6 +40,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": false
