--- a/notebooks/LDA Pre-Experiment.ipynb
+++ b/notebooks/LDA Pre-Experiment.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import lda\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
     "from semcable.experiment import Experiment\n",
     "\n",
     "doc_word_mat = lda.datasets.load_reuters()\n",
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -36,156 +37,156 @@
       "INFO:lda:n_topics: 20\n",
       "INFO:lda:n_iter: 1500\n",
       "INFO:lda:<0> log likelihood: -1051748\n",
-      "INFO:lda:<10> log likelihood: -720914\n",
-      "INFO:lda:<20> log likelihood: -697325\n",
-      "INFO:lda:<30> log likelihood: -689299\n",
-      "INFO:lda:<40> log likelihood: -684048\n",
-      "INFO:lda:<50> log likelihood: -679661\n",
-      "INFO:lda:<60> log likelihood: -677089\n",
-      "INFO:lda:<70> log likelihood: -674319\n",
-      "INFO:lda:<80> log likelihood: -673041\n",
-      "INFO:lda:<90> log likelihood: -671861\n",
-      "INFO:lda:<100> log likelihood: -671378\n",
-      "INFO:lda:<110> log likelihood: -669197\n",
-      "INFO:lda:<120> log likelihood: -668723\n",
-      "INFO:lda:<130> log likelihood: -667843\n",
-      "INFO:lda:<140> log likelihood: -667514\n",
-      "INFO:lda:<150> log likelihood: -666729\n",
-      "INFO:lda:<160> log likelihood: -666396\n",
-      "INFO:lda:<170> log likelihood: -666131\n",
-      "INFO:lda:<180> log likelihood: -665107\n",
-      "INFO:lda:<190> log likelihood: -665108\n",
-      "INFO:lda:<200> log likelihood: -664960\n",
-      "INFO:lda:<210> log likelihood: -664488\n",
-      "INFO:lda:<220> log likelihood: -664444\n",
-      "INFO:lda:<230> log likelihood: -663820\n",
-      "INFO:lda:<240> log likelihood: -663978\n",
-      "INFO:lda:<250> log likelihood: -663707\n",
-      "INFO:lda:<260> log likelihood: -663095\n",
-      "INFO:lda:<270> log likelihood: -663269\n",
-      "INFO:lda:<280> log likelihood: -662754\n",
-      "INFO:lda:<290> log likelihood: -662681\n",
-      "INFO:lda:<300> log likelihood: -662488\n",
-      "INFO:lda:<310> log likelihood: -662394\n",
-      "INFO:lda:<320> log likelihood: -662125\n",
-      "INFO:lda:<330> log likelihood: -661551\n",
-      "INFO:lda:<340> log likelihood: -661889\n",
-      "INFO:lda:<350> log likelihood: -661738\n",
-      "INFO:lda:<360> log likelihood: -661571\n",
-      "INFO:lda:<370> log likelihood: -661721\n",
-      "INFO:lda:<380> log likelihood: -661752\n",
-      "INFO:lda:<390> log likelihood: -660971\n",
-      "INFO:lda:<400> log likelihood: -661289\n",
-      "INFO:lda:<410> log likelihood: -661151\n",
-      "INFO:lda:<420> log likelihood: -661828\n",
-      "INFO:lda:<430> log likelihood: -661426\n",
-      "INFO:lda:<440> log likelihood: -661328\n",
-      "INFO:lda:<450> log likelihood: -661168\n",
-      "INFO:lda:<460> log likelihood: -661107\n",
-      "INFO:lda:<470> log likelihood: -661217\n",
-      "INFO:lda:<480> log likelihood: -661269\n",
-      "INFO:lda:<490> log likelihood: -660702\n",
-      "INFO:lda:<500> log likelihood: -661081\n",
-      "INFO:lda:<510> log likelihood: -661288\n",
-      "INFO:lda:<520> log likelihood: -661267\n",
-      "INFO:lda:<530> log likelihood: -660437\n",
-      "INFO:lda:<540> log likelihood: -660674\n",
-      "INFO:lda:<550> log likelihood: -660571\n",
-      "INFO:lda:<560> log likelihood: -660960\n",
-      "INFO:lda:<570> log likelihood: -660672\n",
-      "INFO:lda:<580> log likelihood: -660949\n",
-      "INFO:lda:<590> log likelihood: -660671\n",
-      "INFO:lda:<600> log likelihood: -660210\n",
-      "INFO:lda:<610> log likelihood: -660354\n",
-      "INFO:lda:<620> log likelihood: -659893\n",
-      "INFO:lda:<630> log likelihood: -659805\n",
-      "INFO:lda:<640> log likelihood: -659956\n",
-      "INFO:lda:<650> log likelihood: -660195\n",
-      "INFO:lda:<660> log likelihood: -659852\n",
-      "INFO:lda:<670> log likelihood: -660029\n",
-      "INFO:lda:<680> log likelihood: -659313\n",
-      "INFO:lda:<690> log likelihood: -659209\n",
-      "INFO:lda:<700> log likelihood: -659899\n",
-      "INFO:lda:<710> log likelihood: -659765\n",
-      "INFO:lda:<720> log likelihood: -659472\n",
-      "INFO:lda:<730> log likelihood: -659627\n",
-      "INFO:lda:<740> log likelihood: -659152\n",
-      "INFO:lda:<750> log likelihood: -659049\n",
-      "INFO:lda:<760> log likelihood: -658623\n",
-      "INFO:lda:<770> log likelihood: -659185\n",
-      "INFO:lda:<780> log likelihood: -659190\n",
-      "INFO:lda:<790> log likelihood: -659279\n",
-      "INFO:lda:<800> log likelihood: -658833\n",
-      "INFO:lda:<810> log likelihood: -658896\n",
-      "INFO:lda:<820> log likelihood: -659071\n",
-      "INFO:lda:<830> log likelihood: -658644\n",
-      "INFO:lda:<840> log likelihood: -659121\n",
-      "INFO:lda:<850> log likelihood: -658571\n",
-      "INFO:lda:<860> log likelihood: -658597\n",
-      "INFO:lda:<870> log likelihood: -658423\n",
-      "INFO:lda:<880> log likelihood: -658353\n",
-      "INFO:lda:<890> log likelihood: -658418\n",
-      "INFO:lda:<900> log likelihood: -658153\n",
-      "INFO:lda:<910> log likelihood: -657932\n",
-      "INFO:lda:<920> log likelihood: -657955\n",
-      "INFO:lda:<930> log likelihood: -658105\n",
-      "INFO:lda:<940> log likelihood: -657812\n",
-      "INFO:lda:<950> log likelihood: -658239\n",
-      "INFO:lda:<960> log likelihood: -658327\n",
-      "INFO:lda:<970> log likelihood: -658353\n",
-      "INFO:lda:<980> log likelihood: -658250\n",
-      "INFO:lda:<990> log likelihood: -657935\n",
-      "INFO:lda:<1000> log likelihood: -658225\n",
-      "INFO:lda:<1010> log likelihood: -658293\n",
-      "INFO:lda:<1020> log likelihood: -657925\n",
-      "INFO:lda:<1030> log likelihood: -657578\n",
-      "INFO:lda:<1040> log likelihood: -657627\n",
-      "INFO:lda:<1050> log likelihood: -657992\n",
-      "INFO:lda:<1060> log likelihood: -657871\n",
-      "INFO:lda:<1070> log likelihood: -658130\n",
-      "INFO:lda:<1080> log likelihood: -657891\n",
-      "INFO:lda:<1090> log likelihood: -657274\n",
-      "INFO:lda:<1100> log likelihood: -658103\n",
-      "INFO:lda:<1110> log likelihood: -657052\n",
-      "INFO:lda:<1120> log likelihood: -657482\n",
-      "INFO:lda:<1130> log likelihood: -657370\n",
-      "INFO:lda:<1140> log likelihood: -657541\n",
-      "INFO:lda:<1150> log likelihood: -656825\n",
-      "INFO:lda:<1160> log likelihood: -657065\n",
-      "INFO:lda:<1170> log likelihood: -657351\n",
-      "INFO:lda:<1180> log likelihood: -657305\n",
-      "INFO:lda:<1190> log likelihood: -656739\n",
-      "INFO:lda:<1200> log likelihood: -657200\n",
-      "INFO:lda:<1210> log likelihood: -657511\n",
-      "INFO:lda:<1220> log likelihood: -656821\n",
-      "INFO:lda:<1230> log likelihood: -656879\n",
-      "INFO:lda:<1240> log likelihood: -657220\n",
-      "INFO:lda:<1250> log likelihood: -656963\n",
-      "INFO:lda:<1260> log likelihood: -657375\n",
-      "INFO:lda:<1270> log likelihood: -656901\n",
-      "INFO:lda:<1280> log likelihood: -656844\n",
-      "INFO:lda:<1290> log likelihood: -656919\n",
-      "INFO:lda:<1300> log likelihood: -657421\n",
-      "INFO:lda:<1310> log likelihood: -656635\n",
-      "INFO:lda:<1320> log likelihood: -656293\n",
-      "INFO:lda:<1330> log likelihood: -656519\n",
-      "INFO:lda:<1340> log likelihood: -656345\n",
-      "INFO:lda:<1350> log likelihood: -656023\n",
-      "INFO:lda:<1360> log likelihood: -656136\n",
-      "INFO:lda:<1370> log likelihood: -656486\n",
-      "INFO:lda:<1380> log likelihood: -656832\n",
-      "INFO:lda:<1390> log likelihood: -656441\n",
-      "INFO:lda:<1400> log likelihood: -656106\n",
-      "INFO:lda:<1410> log likelihood: -656627\n",
-      "INFO:lda:<1420> log likelihood: -656762\n",
-      "INFO:lda:<1430> log likelihood: -655634\n",
-      "INFO:lda:<1440> log likelihood: -656498\n",
-      "INFO:lda:<1450> log likelihood: -656129\n",
-      "INFO:lda:<1460> log likelihood: -656555\n",
-      "INFO:lda:<1470> log likelihood: -656335\n",
-      "INFO:lda:<1480> log likelihood: -656799\n",
-      "INFO:lda:<1490> log likelihood: -656126\n",
-      "INFO:lda:<1499> log likelihood: -656056\n"
+      "INFO:lda:<10> log likelihood: -722621\n",
+      "INFO:lda:<20> log likelihood: -700844\n",
+      "INFO:lda:<30> log likelihood: -689268\n",
+      "INFO:lda:<40> log likelihood: -684509\n",
+      "INFO:lda:<50> log likelihood: -680135\n",
+      "INFO:lda:<60> log likelihood: -677092\n",
+      "INFO:lda:<70> log likelihood: -675643\n",
+      "INFO:lda:<80> log likelihood: -673406\n",
+      "INFO:lda:<90> log likelihood: -671983\n",
+      "INFO:lda:<100> log likelihood: -671082\n",
+      "INFO:lda:<110> log likelihood: -670354\n",
+      "INFO:lda:<120> log likelihood: -668943\n",
+      "INFO:lda:<130> log likelihood: -668919\n",
+      "INFO:lda:<140> log likelihood: -668087\n",
+      "INFO:lda:<150> log likelihood: -667652\n",
+      "INFO:lda:<160> log likelihood: -666917\n",
+      "INFO:lda:<170> log likelihood: -666140\n",
+      "INFO:lda:<180> log likelihood: -666096\n",
+      "INFO:lda:<190> log likelihood: -666015\n",
+      "INFO:lda:<200> log likelihood: -665115\n",
+      "INFO:lda:<210> log likelihood: -663909\n",
+      "INFO:lda:<220> log likelihood: -663761\n",
+      "INFO:lda:<230> log likelihood: -663211\n",
+      "INFO:lda:<240> log likelihood: -663122\n",
+      "INFO:lda:<250> log likelihood: -662899\n",
+      "INFO:lda:<260> log likelihood: -663144\n",
+      "INFO:lda:<270> log likelihood: -662637\n",
+      "INFO:lda:<280> log likelihood: -662347\n",
+      "INFO:lda:<290> log likelihood: -662094\n",
+      "INFO:lda:<300> log likelihood: -662266\n",
+      "INFO:lda:<310> log likelihood: -661815\n",
+      "INFO:lda:<320> log likelihood: -661285\n",
+      "INFO:lda:<330> log likelihood: -661086\n",
+      "INFO:lda:<340> log likelihood: -661337\n",
+      "INFO:lda:<350> log likelihood: -661136\n",
+      "INFO:lda:<360> log likelihood: -661213\n",
+      "INFO:lda:<370> log likelihood: -660455\n",
+      "INFO:lda:<380> log likelihood: -660628\n",
+      "INFO:lda:<390> log likelihood: -660234\n",
+      "INFO:lda:<400> log likelihood: -660247\n",
+      "INFO:lda:<410> log likelihood: -659915\n",
+      "INFO:lda:<420> log likelihood: -659974\n",
+      "INFO:lda:<430> log likelihood: -659930\n",
+      "INFO:lda:<440> log likelihood: -659806\n",
+      "INFO:lda:<450> log likelihood: -659814\n",
+      "INFO:lda:<460> log likelihood: -659423\n",
+      "INFO:lda:<470> log likelihood: -659414\n",
+      "INFO:lda:<480> log likelihood: -659348\n",
+      "INFO:lda:<490> log likelihood: -659236\n",
+      "INFO:lda:<500> log likelihood: -659065\n",
+      "INFO:lda:<510> log likelihood: -658701\n",
+      "INFO:lda:<520> log likelihood: -658983\n",
+      "INFO:lda:<530> log likelihood: -658548\n",
+      "INFO:lda:<540> log likelihood: -659190\n",
+      "INFO:lda:<550> log likelihood: -659381\n",
+      "INFO:lda:<560> log likelihood: -658726\n",
+      "INFO:lda:<570> log likelihood: -658515\n",
+      "INFO:lda:<580> log likelihood: -658689\n",
+      "INFO:lda:<590> log likelihood: -658947\n",
+      "INFO:lda:<600> log likelihood: -658622\n",
+      "INFO:lda:<610> log likelihood: -658369\n",
+      "INFO:lda:<620> log likelihood: -658354\n",
+      "INFO:lda:<630> log likelihood: -657905\n",
+      "INFO:lda:<640> log likelihood: -658184\n",
+      "INFO:lda:<650> log likelihood: -657966\n",
+      "INFO:lda:<660> log likelihood: -657822\n",
+      "INFO:lda:<670> log likelihood: -658006\n",
+      "INFO:lda:<680> log likelihood: -657910\n",
+      "INFO:lda:<690> log likelihood: -658281\n",
+      "INFO:lda:<700> log likelihood: -657960\n",
+      "INFO:lda:<710> log likelihood: -658213\n",
+      "INFO:lda:<720> log likelihood: -658504\n",
+      "INFO:lda:<730> log likelihood: -658079\n",
+      "INFO:lda:<740> log likelihood: -658365\n",
+      "INFO:lda:<750> log likelihood: -657669\n",
+      "INFO:lda:<760> log likelihood: -657375\n",
+      "INFO:lda:<770> log likelihood: -658058\n",
+      "INFO:lda:<780> log likelihood: -657668\n",
+      "INFO:lda:<790> log likelihood: -657879\n",
+      "INFO:lda:<800> log likelihood: -657726\n",
+      "INFO:lda:<810> log likelihood: -657571\n",
+      "INFO:lda:<820> log likelihood: -657517\n",
+      "INFO:lda:<830> log likelihood: -657286\n",
+      "INFO:lda:<840> log likelihood: -657383\n",
+      "INFO:lda:<850> log likelihood: -656927\n",
+      "INFO:lda:<860> log likelihood: -657299\n",
+      "INFO:lda:<870> log likelihood: -657285\n",
+      "INFO:lda:<880> log likelihood: -657510\n",
+      "INFO:lda:<890> log likelihood: -656899\n",
+      "INFO:lda:<900> log likelihood: -657202\n",
+      "INFO:lda:<910> log likelihood: -657042\n",
+      "INFO:lda:<920> log likelihood: -657341\n",
+      "INFO:lda:<930> log likelihood: -657210\n",
+      "INFO:lda:<940> log likelihood: -657228\n",
+      "INFO:lda:<950> log likelihood: -657245\n",
+      "INFO:lda:<960> log likelihood: -657482\n",
+      "INFO:lda:<970> log likelihood: -656984\n",
+      "INFO:lda:<980> log likelihood: -657183\n",
+      "INFO:lda:<990> log likelihood: -657083\n",
+      "INFO:lda:<1000> log likelihood: -656716\n",
+      "INFO:lda:<1010> log likelihood: -656989\n",
+      "INFO:lda:<1020> log likelihood: -657090\n",
+      "INFO:lda:<1030> log likelihood: -657129\n",
+      "INFO:lda:<1040> log likelihood: -656591\n",
+      "INFO:lda:<1050> log likelihood: -656483\n",
+      "INFO:lda:<1060> log likelihood: -656168\n",
+      "INFO:lda:<1070> log likelihood: -655960\n",
+      "INFO:lda:<1080> log likelihood: -656372\n",
+      "INFO:lda:<1090> log likelihood: -656032\n",
+      "INFO:lda:<1100> log likelihood: -656608\n",
+      "INFO:lda:<1110> log likelihood: -656815\n",
+      "INFO:lda:<1120> log likelihood: -656404\n",
+      "INFO:lda:<1130> log likelihood: -656901\n",
+      "INFO:lda:<1140> log likelihood: -656313\n",
+      "INFO:lda:<1150> log likelihood: -656287\n",
+      "INFO:lda:<1160> log likelihood: -656008\n",
+      "INFO:lda:<1170> log likelihood: -656396\n",
+      "INFO:lda:<1180> log likelihood: -655901\n",
+      "INFO:lda:<1190> log likelihood: -656522\n",
+      "INFO:lda:<1200> log likelihood: -656204\n",
+      "INFO:lda:<1210> log likelihood: -656169\n",
+      "INFO:lda:<1220> log likelihood: -656642\n",
+      "INFO:lda:<1230> log likelihood: -656184\n",
+      "INFO:lda:<1240> log likelihood: -655787\n",
+      "INFO:lda:<1250> log likelihood: -656148\n",
+      "INFO:lda:<1260> log likelihood: -655666\n",
+      "INFO:lda:<1270> log likelihood: -655683\n",
+      "INFO:lda:<1280> log likelihood: -655630\n",
+      "INFO:lda:<1290> log likelihood: -655950\n",
+      "INFO:lda:<1300> log likelihood: -655432\n",
+      "INFO:lda:<1310> log likelihood: -655582\n",
+      "INFO:lda:<1320> log likelihood: -655617\n",
+      "INFO:lda:<1330> log likelihood: -656131\n",
+      "INFO:lda:<1340> log likelihood: -655918\n",
+      "INFO:lda:<1350> log likelihood: -656196\n",
+      "INFO:lda:<1360> log likelihood: -656211\n",
+      "INFO:lda:<1370> log likelihood: -655983\n",
+      "INFO:lda:<1380> log likelihood: -656164\n",
+      "INFO:lda:<1390> log likelihood: -656305\n",
+      "INFO:lda:<1400> log likelihood: -656352\n",
+      "INFO:lda:<1410> log likelihood: -655548\n",
+      "INFO:lda:<1420> log likelihood: -656329\n",
+      "INFO:lda:<1430> log likelihood: -655977\n",
+      "INFO:lda:<1440> log likelihood: -655794\n",
+      "INFO:lda:<1450> log likelihood: -655191\n",
+      "INFO:lda:<1460> log likelihood: -655761\n",
+      "INFO:lda:<1470> log likelihood: -655445\n",
+      "INFO:lda:<1480> log likelihood: -656048\n",
+      "INFO:lda:<1490> log likelihood: -656020\n",
+      "INFO:lda:<1499> log likelihood: -656157\n"
      ]
     }
    ],
@@ -194,6 +195,38 @@
     "#logging.disable(logging.CRITICAL)\n",
     "\n",
     "e.fit_lda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ldam = e.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-656156.7133368434\n",
+      "[-1051747.5468650647, -722620.6672350994, -700843.989134124, -689267.8866105847, -684509.1276161359, -680134.5744395119, -677092.2716663887, -675643.4050458781, -673406.1623524663, -671983.3978341792, -671081.5595401687, -670354.2745700844, -668942.774817921, -668919.4218711139, -668087.3005584857, -667652.3542344222, -666917.0033279896, -666140.0514475559, -666095.8985851676, -666015.4915739439, -665115.2217926315, -663908.5761210665, -663761.2998331212, -663211.1173674196, -663121.7749980524, -662898.6913703858, -663144.1861092607, -662636.8166298822, -662346.5301412737, -662093.7369546472, -662265.9526326403, -661814.8560022512, -661284.7384736281, -661085.5946001665, -661337.1461076222, -661136.250708699, -661212.5056099148, -660454.6013386168, -660627.8075401685, -660233.8762639144, -660247.4285898415, -659914.5655100431, -659974.4951747033, -659930.0132410841, -659806.4809084195, -659813.7479118439, -659423.1665441577, -659413.5837016567, -659348.0191111983, -659235.8674285914, -659065.0092411536, -658700.9032300108, -658982.5093834336, -658547.6097505045, -659190.1453728104, -659381.204367379, -658726.2290744358, -658515.284923061, -658688.7860468525, -658946.9105849842, -658622.2041694373, -658368.6286616069, -658354.1391855034, -657904.5687423997, -658184.066666239, -657966.3433722896, -657821.8524123133, -658005.8819355574, -657910.1306231325, -658280.5095823504, -657960.1470375848, -658212.730203939, -658504.2525004875, -658079.1035291859, -658364.9721833637, -657668.633280592, -657375.2504901388, -658058.3595744524, -657667.6984291546, -657878.6166305216, -657726.3591216805, -657570.6299302728, -657516.5352555917, -657286.3950729889, -657382.8292383709, -656926.8580378345, -657299.1286485363, -657285.3784755095, -657510.2955437558, -656899.2276737189, -657201.5807021533, -657041.619244129, -657340.5566284668, -657210.1630051929, -657228.2937780143, -657245.0955148275, -657481.522396528, -656984.2481937913, -657183.0131446779, -657083.1359723151, -656716.1407961574, -656988.9753893781, -657089.9878399762, -657129.1029574343, -656590.8651689361, -656482.9445858991, -656168.4350126017, -655959.5921106134, -656372.0235383279, -656031.6952307555, -656608.1668057581, -656815.3912253381, -656404.3345430667, -656901.3142121071, -656313.3728640071, -656287.0202123304, -656007.5959154516, -656395.8004149635, -655900.7501952121, -656521.8209643974, -656204.0656944565, -656168.6101390723, -656642.4093838829, -656183.7918321366, -655786.6445494569, -656148.06874559, -655666.3099644285, -655683.1512134594, -655630.2120982187, -655949.5970885722, -655432.0451632113, -655581.9655151806, -655616.8271268305, -656131.1954464101, -655917.5329987633, -656195.980923024, -656210.7932493403, -655982.5386463782, -656163.934766424, -656304.9592116477, -656352.0209774837, -655548.4969046429, -656328.5797207644, -655977.1769447562, -655794.1127589154, -655191.1140849078, -655760.8012923829, -655445.4957986572, -656047.8838604009, -656020.1523317029]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ldam.loglikelihood())\n",
+    "print(ldam.loglikelihoods_)"
    ]
   },
   {
